samples/_failures_safe/1761282362_ead82b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30a2269e.c: In function ‘main’:
./samples/SAFE/__tmp_30a2269e.c:134:12: error: missing terminating " character
  134 |     printf("=========================\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_30a2269e.c:134:5: error: expected expression at end of input
  134 |     printf("=========================\n
      |     ^~~~~~
./samples/SAFE/__tmp_30a2269e.c:134:5: error: expected declaration or statement at end of input
